[gd_scene load_steps=4 format=3]

[ext_resource type="Script" path="res://scripts/main.gd" id="1_main"]
[ext_resource type="Script" path="res://scripts/ui/world_view.gd" id="2_world"]
[ext_resource type="Script" path="res://scripts/ui/game_ui.gd" id="3_ui"]

[node name="Main" type="Node2D"]
script = ExtResource("1_main")

[node name="WorldView" type="Node2D" parent="."]
script = ExtResource("2_world")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="GameUI" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("3_ui")

[node name="Panel" type="Panel" parent="CanvasLayer/GameUI"]
custom_minimum_size = Vector2(360, 680)
layout_mode = 0
offset_left = 900.0
offset_top = 20.0
offset_right = 1260.0
offset_bottom = 700.0

[node name="DayLabel" type="Label" parent="CanvasLayer/GameUI/Panel"]
layout_mode = 0
offset_left = 16.0
offset_top = 16.0
offset_right = 140.0
offset_bottom = 40.0
text = "Day 1"

[node name="WeatherLabel" type="Label" parent="CanvasLayer/GameUI/Panel"]
layout_mode = 0
offset_left = 16.0
offset_top = 44.0
offset_right = 260.0
offset_bottom = 68.0
text = "Weather: Clear"

[node name="RoomOption" type="OptionButton" parent="CanvasLayer/GameUI/Panel"]
layout_mode = 0
offset_left = 16.0
offset_top = 80.0
offset_right = 180.0
offset_bottom = 112.0

[node name="Survivors" type="ItemList" parent="CanvasLayer/GameUI/Panel"]
layout_mode = 0
offset_left = 16.0
offset_top = 126.0
offset_right = 340.0
offset_bottom = 290.0

[node name="SendMissionButton" type="Button" parent="CanvasLayer/GameUI/Panel"]
layout_mode = 0
offset_left = 16.0
offset_top = 302.0
offset_right = 200.0
offset_bottom = 336.0
text = "Send Scavenge Mission"

[node name="Log" type="RichTextLabel" parent="CanvasLayer/GameUI/Panel"]
layout_mode = 0
offset_left = 16.0
offset_top = 350.0
offset_right = 340.0
offset_bottom = 650.0
bbcode_enabled = true
text = "[b]Event Log[/b]\n"
